K1J-384: SvarPa should be set if parent has complement message (#322)